# x3_gimbal_track

./: CMakeLists.txt  README.md  package.xml
launch/: gimbal_track.launch
src/: gimbal_track_node.cpp
